    former is ignored and can be omitted (it is the ordinal number of an
    `expect` statement in a given example), but is accepted for ease of
    cutting and pasting.

  - From this release out, matchers using `to_` are preferred to using
    `should_`.  When negating a new syntax `to_` matcher, both of
    `to_not_` and `not_to` are accepted.

** Incompatible changes:

  - Invoking `specl` with no filename arguments no longer reads specs
    from standard input.  You must explicitly pass a "-" argument to get
    that behaviour.

  - RSpec has been moving from expressing `should_` expectations to
    using `to_` for technical reasons.  Specl now uses `to_` throughout,
    not for technical reasons, but because:

      (i) expectations almost always read better with `to_` instead of
          `should_`;
     (ii) it's shorter and easier to type, so is less "noisy" in among
          the important surrounding arguments.

    There are no plans to remove `should_` from Specl, so you can expect
    to safely continue to use your existing spec files indefinitely: But
    all mention of `should_` has been removed from documentation, and I
    recommend you use `to_` for new spec files for the reasons above.

** Bug fixes:

  - Setting table elements from outer environment tables no longer leak
    into sibling examples.  For example, changing entries in the _G
    table or adding entries to the string table affects only the current
    innermost environment now, just like setting other variables.

  - Unrecognised command-line options are diagnosed properly.


* Noteworthy changes in release 10 (2014-01-15) [stable]

** Bug fixes:

  - Using specl.shell when Specl itself and the process being
    spawned require different versions of Lua no longer crashes
    with corrupted shared package.path settings.


* Noteworthy changes in release 9 (2013-12-09) [stable]

** New features:

  - Vastly improved error diagnostics for syntax errors in spec